--- a/3 About.html
+++ b/3 About.html
@@ -37,7 +37,7 @@
       <div class="header-container">
         <div class="header-logo">
           <a href="1 Homepage.html" class="logo-link">
-            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218.png" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
+            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218_1078_218.webp" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
           </a>
         </div>
         <nav class="header-nav">
@@ -104,7 +104,7 @@
                     <div class="team-grid">
                         <div class="team-member">
                             <div class="team-member-image">
-                                <img src="10 Assets/Staff/John Fabricius.png" alt="John Fabricius headshot" class="team-headshot" loading="lazy">
+                                <img src="10 Assets/Staff/John Fabricius_500_500.webp" alt="John Fabricius headshot" class="team-headshot" loading="lazy">
                             </div>
                             <h3>John Fabricius</h3>
                             <div class="role">Executive Director</div>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="team-member">
                             <div class="team-member-image">
-                                <img src="10 Assets/Staff/J Alexandria Hunt Garcia..png" alt="J Alexandria Hunt Garcia headshot" class="team-headshot" loading="lazy">
+                                <img src="10 Assets/Staff/J Alexandria Hunt Garcia._500_500.webp" alt="J Alexandria Hunt Garcia headshot" class="team-headshot" loading="lazy">
                             </div>
                             <h3>J</h3>
                             <div class="role">Drug Policy & Substance Use Advocate</div>
@@ -120,7 +120,7 @@
                         </div>
                         <div class="team-member">
                             <div class="team-member-image">
-                                <img src="10 Assets/Staff/Jessica Johnson.png" alt="Jessica Johnson headshot" class="team-headshot" loading="lazy">
+                                <img src="10 Assets/Staff/Jessica Johnson_500_500.webp" alt="Jessica Johnson headshot" class="team-headshot" loading="lazy">
                             </div>
                             <h3>Jessica</h3>
                             <div class="role">Legislative Advocate</div>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="team-member">
                             <div class="team-member-image">
-                                <img src="10 Assets/Staff/Sherri Scates.png" alt="Sherri Scates headshot" class="team-headshot" loading="lazy">
+                                <img src="10 Assets/Staff/Sherri Scates_508_509.webp" alt="Sherri Scates headshot" class="team-headshot" loading="lazy">
                             </div>
                             <h3>Sherri</h3>
                             <div class="role">Family Member Advocate</div>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="team-member">
                             <div class="team-member-image">
-                                <img src="10 Assets/Staff/Mindi Kraicinski.png" alt="Mindi Kraicinski headshot" class="team-headshot" loading="lazy">
+                                <img src="10 Assets/Staff/Mindi Kraicinski_500_500.webp" alt="Mindi Kraicinski headshot" class="team-headshot" loading="lazy">
                             </div>
                             <h3>Mindi Krasinski</h3>
                             <div class="role">Institutional Expert</div>
