--- a/4E arts_in_prison_page.html
+++ b/4E arts_in_prison_page.html
@@ -27,7 +27,7 @@
       <div class="header-container">
         <div class="header-logo">
           <a href="1 Homepage.html" class="logo-link">
-            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218.png" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
+            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218_1078_218.webp" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
           </a>
         </div>
         <nav class="header-nav">
@@ -68,7 +68,7 @@
     <!-- End Header -->
 
     <main id="main-content" role="main">
-        <section class="hero">
+        <section class="hero arts-in-prison-hero">
             <div class="hero-content">
                 <h1>Arts in Prison</h1>
                 <p class="hero-subtitle">Transformative power of artistic expression in rehabilitation and healing through music, visual arts, dance, and movement workshops</p>
