--- a/6 Partners.html
+++ b/6 Partners.html
@@ -25,7 +25,7 @@
       <div class="header-container">
         <div class="header-logo">
           <a href="1 Homepage.html" class="logo-link">
-            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218.png" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
+            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218_1078_218.webp" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
           </a>
         </div>
         <nav class="header-nav">
@@ -237,7 +237,7 @@
             </div>
 
                     <div class="partner-card" data-category="advocacy">
-                        <img src="10 Assets/Partner Logos/ACLU_National_Prison_Project_825_881_825_881.png" alt="ACLU National Prison Project Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/ACLU_National_Prison_Project_825_881_825_881_825_881.webp" alt="ACLU National Prison Project Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>ACLU National Prison Project</h3>
                             <p>Works to protect the civil rights of incarcerated people nationwide.</p>
@@ -250,7 +250,7 @@
                     </div>
 
                     <div class="partner-card" data-category="criminal-justice">
-                        <img src="10 Assets/Partner Logos/Alliance_724_162_724_162.png" alt="Alliance for Safety and Justice Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Alliance_724_162_724_162_724_162.webp" alt="Alliance for Safety and Justice Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Alliance for Safety and Justice</h3>
                             <p>Advances community-driven solutions that reduce incarceration.</p>
@@ -263,7 +263,7 @@
                     </div>
 
                     <div class="partner-card" data-category="health">
-                        <img src="10 Assets/Partner Logos/CAPPA_818_328_818_328.png" alt="CAPPA Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/CAPPA_818_328_818_328_818_328.webp" alt="CAPPA Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>CAPPA</h3>
                             <p>Provides training and certification for childbirth and postpartum professionals.</p>
@@ -276,7 +276,7 @@
                     </div>
 
                     <div class="partner-card" data-category="health">
-                        <img src="10 Assets/Partner Logos/DONA_392_108_392_108.png" alt="DONA International Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/DONA_392_108_392_108_392_108.webp" alt="DONA International Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>DONA International</h3>
                             <p>Largest doula certifying organization supporting families worldwide.</p>
@@ -289,7 +289,7 @@
                     </div>
 
                     <div class="partner-card" data-category="harm-reduction">
-                        <img src="10 Assets/Partner Logos/Drug_Policy_Alliance_266_118_266_118.png" alt="Drug Policy Alliance Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Drug_Policy_Alliance_266_118_266_118_266_118.webp" alt="Drug Policy Alliance Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Drug Policy Alliance</h3>
                             <p>Advocates for drug policies grounded in science, compassion, and health.</p>
@@ -302,7 +302,7 @@
                     </div>
 
                     <div class="partner-card" data-category="criminal-justice">
-                        <img src="10 Assets/Partner Logos/FAMM_424_463_424_463.png" alt="FAMM Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/FAMM_424_463_424_463_424_463.webp" alt="FAMM Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Families Against Mandatory Minimums</h3>
                             <p>Fights for fair and proportionate sentencing laws nationwide.</p>
@@ -315,7 +315,7 @@
                     </div>
 
                     <div class="partner-card" data-category="health">
-                        <img src="10 Assets/Partner Logos/ICEA_546_106_546_106.png" alt="ICEA Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/ICEA_546_106_546_106_546_106.webp" alt="ICEA Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>International Childbirth Education Association</h3>
                             <p>Promotes excellence in childbirth education and doula care.</p>
@@ -328,7 +328,7 @@
                     </div>
 
                     <div class="partner-card" data-category="advocacy">
-                        <img src="10 Assets/Partner Logos/Innocence_Project_461_137_461_137.png" alt="Innocence Project Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Innocence_Project_461_137_461_137_461_137.webp" alt="Innocence Project Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Innocence Project</h3>
                             <p>Exonerates the wrongly convicted through DNA testing and reform.</p>
@@ -341,7 +341,7 @@
                     </div>
 
                     <div class="partner-card" data-category="research">
-                        <img src="10 Assets/Partner Logos/Marshall_Project_849_112_849_112.png" alt="The Marshall Project Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Marshall_Project_849_112_849_112_849_112.webp" alt="The Marshall Project Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>The Marshall Project</h3>
                             <p>Nonprofit newsroom covering the U.S. criminal justice system.</p>
@@ -354,7 +354,7 @@
                     </div>
 
                     <div class="partner-card" data-category="health">
-                        <img src="10 Assets/Partner Logos/NBDA_781_781_781_781.png" alt="National Black Doulas Association Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/NBDA_781_781_781_781_781_781.webp" alt="National Black Doulas Association Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>National Black Doulas Association</h3>
                             <p>Supports Black birthing families and trains diverse doulas.</p>
@@ -367,7 +367,7 @@
                     </div>
 
                     <div class="partner-card" data-category="research">
-                        <img src="10 Assets/Partner Logos/NIH_780_120_780_120.png" alt="NIH Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/NIH_780_120_780_120_780_120.webp" alt="NIH Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>National Institutes of Health</h3>
                             <p>U.S. medical research agency improving health and saving lives.</p>
@@ -380,7 +380,7 @@
                     </div>
 
                     <div class="partner-card" data-category="harm-reduction">
-                        <img src="10 Assets/Partner Logos/National_Harm_Reduction_Coalition_331_138_331_138.png" alt="National Harm Reduction Coalition Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/National_Harm_Reduction_Coalition_331_138_331_138_331_138.webp" alt="National Harm Reduction Coalition Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>National Harm Reduction Coalition</h3>
                             <p>Works to advance health and justice for people who use drugs.</p>
@@ -393,7 +393,7 @@
                     </div>
 
                     <div class="partner-card" data-category="harm-reduction">
-                        <img src="10 Assets/Partner Logos/Overdose_Prevention_841_150_841_150.png" alt="Overdose Prevention Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Overdose_Prevention_841_150_841_150_841_150.webp" alt="Overdose Prevention Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Overdose Prevention</h3>
                             <p>Provides tools and resources to help prevent overdose deaths.</p>
@@ -406,7 +406,7 @@
                     </div>
 
                     <div class="partner-card" data-category="research">
-                        <img src="10 Assets/Partner Logos/Prison_Policy_Initiative_421_145_421_145.png" alt="Prison Policy Initiative Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Prison_Policy_Initiative_421_145_421_145_421_145.webp" alt="Prison Policy Initiative Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Prison Policy Initiative</h3>
                             <p>Produces cutting-edge research to expose the harms of mass incarceration.</p>
@@ -419,7 +419,7 @@
                     </div>
 
                     <div class="partner-card" data-category="criminal-justice">
-                        <img src="10 Assets/Partner Logos/Right_On_Crime_402_260_402_260.png" alt="Right On Crime Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Right_On_Crime_402_260_402_260_402_260.webp" alt="Right On Crime Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Right On Crime</h3>
                             <p>Conservative campaign for effective criminal justice solutions.</p>
@@ -432,7 +432,7 @@
                     </div>
 
                     <div class="partner-card" data-category="health">
-                        <img src="10 Assets/Partner Logos/SAMHSA_469_159_469_159.png" alt="SAMHSA Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/SAMHSA_469_159_469_159_469_159.webp" alt="SAMHSA Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>SAMHSA</h3>
                             <p>Leads public health efforts to advance behavioral health in the U.S.</p>
@@ -445,7 +445,7 @@
                     </div>
 
                     <div class="partner-card" data-category="advocacy">
-                        <img src="10 Assets/Partner Logos/Sentencing_Project_394_127_394_127.png" alt="The Sentencing Project Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Sentencing_Project_394_127_394_127_394_127.webp" alt="The Sentencing Project Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>The Sentencing Project</h3>
                             <p>Advocates for effective and humane responses to crime.</p>
@@ -458,7 +458,7 @@
                     </div>
 
                     <div class="partner-card" data-category="research">
-                        <img src="10 Assets/Partner Logos/Vera_440_243_440_243.png" alt="Vera Institute of Justice Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/Vera_440_243_440_243_440_243.webp" alt="Vera Institute of Justice Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>Vera Institute of Justice</h3>
                             <p>Partners with communities and government to transform justice systems.</p>
@@ -471,7 +471,7 @@
                     </div>
 
                     <div class="partner-card" data-category="advocacy">
-                        <img src="10 Assets/Partner Logos/fwd_us_436_183_436_183.png" alt="FWD.us Logo" class="partner-logo" loading="lazy">
+                        <img src="10 Assets/Partner Logos/fwd_us_436_183_436_183_436_183.webp" alt="FWD.us Logo" class="partner-logo" loading="lazy">
                         <div class="partner-content">
                             <h3>FWD.us</h3>
                             <p>Advocacy organization working to reform immigration and criminal justice laws.</p>
