--- a/9 Donate.html
+++ b/9 Donate.html
@@ -37,7 +37,7 @@
       <div class="header-container">
         <div class="header-logo">
           <a href="1 Homepage.html" class="logo-link">
-            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218.png" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
+            <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218_1078_218.webp" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
           </a>
         </div>
         <nav class="header-nav">
@@ -455,7 +455,7 @@
                 <div class="stories-grid">
                     <div class="story-card">
                         <div class="story-image">
-                            <img src="10 Assets/Impact Photos/maria-story.jpg" alt="Maria's graduation photo" loading="lazy">
+                            <img src="10 Assets/Impact Photos/maria-story.webp" alt="Maria's graduation photo" loading="lazy">
                         </div>
                         <div class="story-content">
                             <h3>Maria's Second Chance</h3>
@@ -470,7 +470,7 @@
                     
                     <div class="story-card">
                         <div class="story-image">
-                            <img src="10 Assets/Impact Photos/james-story.jpg" alt="James with his children" loading="lazy">
+                            <img src="10 Assets/Impact Photos/james-story.webp" alt="James with his children" loading="lazy">
                         </div>
                         <div class="story-content">
                             <h3>James's Recovery</h3>
@@ -485,7 +485,7 @@
                     
                     <div class="story-card">
                         <div class="story-image">
-                            <img src="10 Assets/Impact Photos/legal-victory.jpg" alt="Legal team celebrating victory" loading="lazy">
+                            <img src="10 Assets/Impact Photos/legal-victory.webp" alt="Legal team celebrating victory" loading="lazy">
                         </div>
                         <div class="story-content">
                             <h3>Legal Victory</h3>
