--- a/1 Homepage.html
+++ b/1 Homepage.html
@@ -102,6 +102,9 @@
                             <a href="#learn-more" class="btn btn-secondary">LEARN MORE</a>
                         </div>
                     </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Homepage Images and Graphics/Homepage Hero Image.webp" alt="Praxis Initiative - Transforming Justice Together" class="hero-img" loading="eager">
+                    </div>
                     <div class="hero-features">
                         <div class="feature-item">
                             <div class="feature-icon"><i class="fas fa-users"></i></div>
@@ -148,7 +151,7 @@
                         </div>
                     </div>
                     <div class="connect-image">
-                        <p>Community members working<br>together for justice reform</p>
+                        <img src="10 Assets/Civics and Advocacy/johnnyfab68_A_photorealistic_image_of_a_diverse_group_of_indi_4a904deb-7cc0-456c-8895-56e1567d829a_2_1232_928.webp" alt="Community members working together for justice reform" class="connect-img" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -159,21 +162,27 @@
                 <p class="section-intro">Channel your passion and expertise to strengthen every facet of our mission. Every dollar you give drives our oversight investigations, fuels evidence-based research, and powers grassroots campaigns.</p>
                 <div class="change-cards">
                     <div class="change-card">
-                        <div class="change-card-image">Volunteer mobilizing<br>events and advocacy</div>
+                        <div class="change-card-image">
+                        <img src="10 Assets/Civics and Advocacy/johnnyfab68_A_dynamic_scene_of_many_hands_reaching_upward_fro_33aea2b6-9768-4c3a-b55b-8c99fa0fadca_2_1232_928.webp" alt="Volunteer mobilizing events and advocacy" class="card-img" loading="lazy">
+                    </div>
                         <div class="change-card-content">
                             <h3>Volunteer Your Time</h3>
                             <p>Channel your passion and expertise—whether you're mobilizing events or assisting with essential back office operations—to strengthen every facet of our mission.</p>
                         </div>
                     </div>
                     <div class="change-card">
-                        <div class="change-card-image">Community advocacy<br>and organizing</div>
+                        <div class="change-card-image">
+                        <img src="10 Assets/Civics and Advocacy/johnnyfab68_Diverse_group_of_hands_joining_together_to_form_a_7d119bf5-2481-4948-8d00-f47d327616ff_0_1232_928.webp" alt="Community advocacy and organizing" class="card-img" loading="lazy">
+                    </div>
                         <div class="change-card-content">
                             <h3>Advocate for Change</h3>
                             <p>Join our public forums and action alerts on emerging issues and campaigns. Build coalitions across ideological lines and elevate voices with lived experience.</p>
                         </div>
                     </div>
                     <div class="change-card">
-                        <div class="change-card-image">Supporting research<br>and campaigns</div>
+                        <div class="change-card-image">
+                        <img src="10 Assets/Donate Images and Graphics/Give_Back_Grapgic_7643_3461.webp" alt="Supporting research and campaigns" class="card-img" loading="lazy">
+                    </div>
                         <div class="change-card-content">
                             <h3>Support with a Donation</h3>
                             <p>Every dollar you give drives our oversight investigations, fuels evidence-based research, and powers grassroots campaigns to transform Arizona's criminal legal system.</p>
@@ -257,7 +266,7 @@
                         </div>
                     </div>
                     <div class="why-praxis-image">
-                        <p>Independent oversight<br>and accountability imagery</p>
+                        <img src="10 Assets/Prison Oversight/Inspector (2025_02_23 03_33_26 UTC)_6000_4000.webp" alt="Independent oversight and accountability" class="why-praxis-img" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -339,9 +348,18 @@
                     </div>
                 </div>
                 <div class="challenge-images">
-                    <div class="challenge-image">Prison Security<br>& Lock Systems</div>
-                    <div class="challenge-image">Healthcare<br>& Treatment Access</div>
-                    <div class="challenge-image">Community<br>Reintegration</div>
+                    <div class="challenge-image">
+                        <img src="10 Assets/Prison Oversight/Lewis Prison ADCRR 1 (2024_12_20 11_31_36 UTC)_1806_1295.webp" alt="Prison Security & Lock Systems" class="challenge-img" loading="lazy">
+                        <div class="challenge-caption">Prison Security<br>& Lock Systems</div>
+                    </div>
+                    <div class="challenge-image">
+                        <img src="10 Assets/Prison Oversight/Man in ADCRR Medical_1920_1080.webp" alt="Healthcare & Treatment Access" class="challenge-img" loading="lazy">
+                        <div class="challenge-caption">Healthcare<br>& Treatment Access</div>
+                    </div>
+                    <div class="challenge-image">
+                        <img src="10 Assets/Civics and Advocacy/Man Leaving Prison One Box (2025_02_23 03_33_26 UTC)_6016_4016.webp" alt="Community Reintegration" class="challenge-img" loading="lazy">
+                        <div class="challenge-caption">Community<br>Reintegration</div>
+                    </div>
                 </div>
             </div>
         </section>
