--- a/2 Issues.html
+++ b/2 Issues.html
@@ -70,8 +70,15 @@
         <!-- PROBLEM: Crisis Hero Section -->
         <section class="crisis-hero">
             <div class="container">
-                <h1>Arizona's Prison Crisis</h1>
-                <p class="subtitle">A system in complete breakdown. Lives hanging in the balance. Action needed NOW.</p>
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1>Arizona's Prison Crisis</h1>
+                        <p class="subtitle">A system in complete breakdown. Lives hanging in the balance. Action needed NOW.</p>
+                    </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Criminal Legal System images/Criminal Legal Reform Hero Image.webp" alt="Arizona's Prison Crisis" class="hero-img" loading="eager">
+                    </div>
+                </div>
                 
                 <div class="shocking-stats">
                     <div class="shock-stat">
