--- a/3 About.html
+++ b/3 About.html
@@ -86,6 +86,9 @@
                         <p>We advocate for independent prison oversight, harm reduction, and bipartisan policy solutions that center human dignity and public safety.</p>
                         <p>Our mission is rooted in lived experience and evidence-based advocacy, working alongside communities to create lasting change.</p>
                     </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Criminal Legal System images/Justice Wide on Blue Nice_5950_3024.webp" alt="Justice and Equity" class="hero-img" loading="eager">
+                    </div>
                     <div class="hero-quote-prominent">
                         <blockquote>
                             <p>"People closest to the problem are closest to the solution but furthest from power and resources."</p>
