--- a/4 Programs.html
+++ b/4 Programs.html
@@ -104,6 +104,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Criminal Legal System images/Image Graphic CJR DRUGS PRISON CIVICS OTHER 158_9998_3855.webp" alt="Our Comprehensive Programs" class="hero-img" loading="eager">
+                    </div>
                     <div class="hero-quote-prominent">
                         <blockquote>
                             <p>"Not everything that is faced can be changed, but nothing can be changed until it is faced."</p>
