--- a/8 Contact.html
+++ b/8 Contact.html
@@ -104,6 +104,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Contact/Contact Hero Image.webp" alt="Contact Our Team" class="hero-img" loading="eager">
+                    </div>
                     <div class="hero-quote-prominent">
                         <blockquote>
                             <p>"The arc of the moral universe is long, but it bends toward justice."</p>
