--- a/9 Donate.html
+++ b/9 Donate.html
@@ -104,6 +104,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Donate Images and Graphics/Donation Hero Image.webp" alt="Support Justice Reform" class="hero-img" loading="eager">
+                    </div>
                     <div class="hero-quote-prominent">
                         <blockquote>
                             <p>"The ultimate measure of a man is not where he stands in moments of comfort and convenience, but where he stands at times of challenge and controversy."</p>
