--- a/4A prison_oversight_page.html
+++ b/4A prison_oversight_page.html
@@ -70,8 +70,15 @@
     <main id="main-content" role="main">
         <section class="hero prison-oversight-hero">
             <div class="hero-content">
-                <h1>Independent Prison Oversight</h1>
-                <p class="hero-subtitle">Establishing transparency, accountability, and protection of human rights through independent correctional ombudsman oversight</p>
+                <div class="hero-text">
+                    <h1>Independent Prison Oversight</h1>
+                    <p class="hero-subtitle">Establishing transparency, accountability, and protection of human rights through independent correctional ombudsman oversight</p>
+                </div>
+                <div class="hero-image">
+                    <img src="10 Assets/Prison Oversight/Inspector (2025_02_23 03_33_26 UTC)_6000_4000.webp" alt="Independent Prison Oversight" class="hero-img" loading="eager">
+                </div>
+            </div>
+            <div class="crisis-content">
                 
                 <div class="crisis-stats">
                     <div class="crisis-stat">
