--- a/4D civic_engagement_page.html
+++ b/4D civic_engagement_page.html
@@ -69,16 +69,18 @@
 
     <main id="main-content" role="main">
         <section class="hero civic-engagement-hero">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1>Civic Engagement & Advocacy Training</h1>
-                    <p class="hero-subtitle">Empowering formerly incarcerated individuals for civic engagement and community leadership through comprehensive training in advocacy, policy development, and public speaking</p>
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1>Civic Engagement & Advocacy Training</h1>
+                        <p class="hero-subtitle">Empowering formerly incarcerated individuals for civic engagement and community leadership through comprehensive training in advocacy, policy development, and public speaking</p>
+                    </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Civics and Advocacy/Core Civics Hero Image.webp" alt="Civic Engagement & Advocacy Training" class="hero-img" loading="eager">
+                    </div>
                 </div>
-                <div class="hero-image">
-                    <img src="10 Assets/Civics and Advocacy/Core Civics Hero Image.webp" alt="Civic Engagement & Advocacy Training" class="hero-img" loading="eager">
-                </div>
-            </div>
-            <div class="power-content">
+                
+                <div class="power-content">
                 
                 <div class="power-stats">
                     <div class="power-stat">
