--- a/4E arts_in_prison_page.html
+++ b/4E arts_in_prison_page.html
@@ -69,16 +69,18 @@
 
     <main id="main-content" role="main">
         <section class="hero arts-in-prison-hero">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1>Arts in Prison</h1>
-                    <p class="hero-subtitle">Transformative power of artistic expression in rehabilitation and healing through music, visual arts, dance, and movement workshops</p>
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1>Arts in Prison</h1>
+                        <p class="hero-subtitle">Transformative power of artistic expression in rehabilitation and healing through music, visual arts, dance, and movement workshops</p>
+                    </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Arts In Prison/Arts In Prison Hero Image.webp" alt="Arts in Prison Programming" class="hero-img" loading="eager">
+                    </div>
                 </div>
-                <div class="hero-image">
-                    <img src="10 Assets/Arts In Prison/Arts In Prison Hero Image.webp" alt="Arts in Prison Programming" class="hero-img" loading="eager">
-                </div>
-            </div>
-            <div class="impact-content">
+                
+                <div class="impact-content">
                 
                 <div class="impact-stats">
                     <div class="impact-stat">
