--- a/1 Homepage.html
+++ b/1 Homepage.html
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="hero-image">
-                        <img src="10 Assets/Homepage Images and Graphics/Homepage Hero Image.webp" alt="Praxis Initiative - Transforming Justice Together" class="hero-img" loading="eager" width="800" height="600" decoding="async">
+                        <img src="https://via.placeholder.com/800x600?text=Hero+Image" alt="Praxis Initiative - Transforming Justice Together" class="hero-img" loading="eager" width="800" height="600" decoding="async">
                     </div>
                 </div>
                 
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                     <div class="connect-image">
-                        <img src="10 Assets/Civics and Advocacy/johnnyfab68_A_photorealistic_image_of_a_diverse_group_of_indi_4a904deb-7cc0-456c-8895-56e1567d829a_2_1232_928.webp" alt="Community members working together for justice reform" class="connect-img" loading="lazy">
+                        <img src="https://via.placeholder.com/600x400?text=Connect+Image" alt="Community members working together for justice reform" class="connect-img" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                 <div class="change-cards">
                     <div class="change-card">
                         <div class="change-card-image">
-                        <img src="10 Assets/Civics and Advocacy/johnnyfab68_A_dynamic_scene_of_many_hands_reaching_upward_fro_33aea2b6-9768-4c3a-b55b-8c99fa0fadca_2_1232_928.webp" alt="Volunteer mobilizing events and advocacy" class="card-img" loading="lazy">
+                        <img src="https://via.placeholder.com/300x200?text=Volunteer" alt="Volunteer mobilizing events and advocacy" class="card-img" loading="lazy">
                     </div>
                         <div class="change-card-content">
                             <h3>Volunteer Your Time</h3>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="change-card">
                         <div class="change-card-image">
-                        <img src="10 Assets/Civics and Advocacy/johnnyfab68_Diverse_group_of_hands_joining_together_to_form_a_7d119bf5-2481-4948-8d00-f47d327616ff_0_1232_928.webp" alt="Community advocacy and organizing" class="card-img" loading="lazy">
+                        <img src="https://via.placeholder.com/300x200?text=Advocate" alt="Community advocacy and organizing" class="card-img" loading="lazy">
                     </div>
                         <div class="change-card-content">
                             <h3>Advocate for Change</h3>
@@ -214,7 +214,7 @@
                     </div>
                     <div class="change-card">
                         <div class="change-card-image">
-                        <img src="10 Assets/Donate Images and Graphics/Give_Back_Grapgic_7643_3461.webp" alt="Supporting research and campaigns" class="card-img" loading="lazy">
+                        <img src="https://via.placeholder.com/300x200?text=Donate" alt="Supporting research and campaigns" class="card-img" loading="lazy">
                     </div>
                         <div class="change-card-content">
                             <h3>Support with a Donation</h3>
@@ -238,31 +238,31 @@
                     <div class="section-subtitle">The people powering our mission for change. Driven by experience, united by purpose.</div>
                     <div class="team-grid">
                         <div class="team-member">
-                            <div class="team-member-image"><img src="10 Assets/Staff/John Fabricius_500_500.webp" alt="John Fabricius headshot" class="team-headshot" loading="lazy"></div>
+                            <div class="team-member-image"><img src="https://via.placeholder.com/120?text=John" alt="John Fabricius headshot" class="team-headshot" loading="lazy"></div>
                             <h3>John Fabricius</h3>
                             <div class="role">Executive Director</div>
                             <div class="bio">John endured fifteen years of incarceration spanning nine distinct prison complexes, acquiring deep institutional knowledge of security operations, administrative processes, and inmate services. He channels this lived expertise into visionary reform strategies, driving legislative advocacy efforts and empowering community-driven oversight initiatives aimed at transforming Arizona's criminal legal system from the inside out.</div>
                         </div>
                         <div class="team-member">
-                            <div class="team-member-image"><img src="10 Assets/Staff/J Alexandria Hunt Garcia._500_500.webp" alt="J Alexandria Hunt Garcia headshot" class="team-headshot" loading="lazy"></div>
+                            <div class="team-member-image"><img src="https://via.placeholder.com/120?text=J+Alexandria" alt="J Alexandria Hunt Garcia headshot" class="team-headshot" loading="lazy"></div>
                             <h3>J Alexandria Hunt-Garcia</h3>
                             <div class="role">Policy Director & Co-founder</div>
                             <div class="bio">J served five years incarcerated over three convictions, gaining firsthand comprehension of carceral policies, systemic barriers, and rehabilitative challenges. Recognized for leadership in drug policy and substance use advocacy, she leverages her lived experience to shape Praxis Initiative's programs, inform policy development, and galvanize stakeholders toward humane, effective reforms within Arizona's criminal legal landscape.</div>
                         </div>
                         <div class="team-member">
-                            <div class="team-member-image"><img src="10 Assets/Staff/Jessica Johnson_500_500.webp" alt="Jessica Johnson headshot" class="team-headshot" loading="lazy"></div>
+                            <div class="team-member-image"><img src="https://via.placeholder.com/120?text=Jessica" alt="Jessica Johnson headshot" class="team-headshot" loading="lazy"></div>
                             <h3>Jessica Johnson</h3>
                             <div class="role">Policy Director & Co-founder</div>
                             <div class="bio">Jessica spent eight years at the Perryville Complex, navigating all custody levels as both inmate and advocate, which forged her profound understanding of institutional shortcomings and reform opportunities. She transforms personal adversity into strategic advocacy, spearheading legislative initiatives and coalition-building efforts designed to improve conditions, expand oversight, and ensure accountability across Arizona's correctional institutions.</div>
                         </div>
                         <div class="team-member">
-                            <div class="team-member-image"><img src="10 Assets/Staff/Sherri Scates_508_509.webp" alt="Sherri Scates headshot" class="team-headshot" loading="lazy"></div>
+                            <div class="team-member-image"><img src="https://via.placeholder.com/120?text=Sherri" alt="Sherri Scates headshot" class="team-headshot" loading="lazy"></div>
                             <h3>Sherri Scates</h3>
                             <div class="role">Operations Coordinator</div>
                             <div class="bio">Sherri witnessed both her sons' incarcerations—one serving a thirty-year sentence and the other tragically lost to suicide after enduring deplorable conditions—which fueled her unwavering commitment to prison oversight. Drawing on personal tragedy, she courageously champions independent monitoring, legislative reforms, and community engagement to demand transparency, justice, and humane treatment for individuals within Arizona's prison system.</div>
                         </div>
                         <div class="team-member">
-                            <div class="team-member-image"><img src="10 Assets/Staff/Mindi Kraicinski_500_500.webp" alt="Mindi Kraicinski headshot" class="team-headshot" loading="lazy"></div>
+                            <div class="team-member-image"><img src="https://via.placeholder.com/120?text=Mindi" alt="Mindi Kraicinski headshot" class="team-headshot" loading="lazy"></div>
                             <h3>Mindi Kraicinski</h3>
                             <div class="role">Corrections Advisor</div>
                             <div class="bio">Mindi dedicated twenty-six years to ADC service, rising from administrative typist to Correctional Officer III working primarily at the Eyman, Florence and Globe complexes. Her extensive operational expertise spans security protocols, case management, and special management units. She now applies this deep institutional insight to guide Praxis Initiative's accountability measures, training programs, and policy recommendations.</div>
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                     <div class="why-praxis-image">
-                        <img src="10 Assets/Prison Oversight/Inspector (2025_02_23 03_33_26 UTC)_6000_4000.webp" alt="Independent oversight and accountability" class="why-praxis-img" loading="lazy">
+                        <img src="https://via.placeholder.com/400x300?text=Oversight" alt="Independent oversight and accountability" class="why-praxis-img" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -382,15 +382,15 @@
                 </div>
                 <div class="challenge-images">
                     <div class="challenge-image">
-                        <img src="10 Assets/Prison Oversight/Lewis Prison ADCRR 1 (2024_12_20 11_31_36 UTC)_1806_1295.webp" alt="Prison Security & Lock Systems" class="challenge-img" loading="lazy">
+                        <img src="https://via.placeholder.com/200x150?text=Security" alt="Prison Security & Lock Systems" class="challenge-img" loading="lazy">
                         <div class="challenge-caption">Prison Security<br>& Lock Systems</div>
                     </div>
                     <div class="challenge-image">
-                        <img src="10 Assets/Prison Oversight/Man in ADCRR Medical_1920_1080.webp" alt="Healthcare & Treatment Access" class="challenge-img" loading="lazy">
+                        <img src="https://via.placeholder.com/200x150?text=Healthcare" alt="Healthcare & Treatment Access" class="challenge-img" loading="lazy">
                         <div class="challenge-caption">Healthcare<br>& Treatment Access</div>
                     </div>
                     <div class="challenge-image">
-                        <img src="10 Assets/Civics and Advocacy/Man Leaving Prison One Box (2025_02_23 03_33_26 UTC)_6016_4016.webp" alt="Community Reintegration" class="challenge-img" loading="lazy">
+                        <img src="https://via.placeholder.com/200x150?text=Reintegration" alt="Community Reintegration" class="challenge-img" loading="lazy">
                         <div class="challenge-caption">Community<br>Reintegration</div>
                     </div>
                 </div>
